--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.4.4",
+    "antd": "^3.11.6",
+    "axios": "^0.18.0",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -33,6 +34,7 @@
     "intl": "^1.2.5",
     "isomorphic-fetch": "^2.2.1",
     "jest": "20.0.4",
+    "jsonp": "^0.2.1",
     "lodash": "^4.17.10",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
