--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^16.3.2",
     "react-intl": "^2.4.0",
     "react-redux": "^5.0.7",
+    "react-router-cache-route": "^1.8.4",
     "react-router-dom": "^4.2.2",
     "react-smooth-scrollbar": "^8.0.6",
     "redux": "^4.0.0",
